Fix checkbox vertial alignment

--- a/packages/zent/assets/grid.scss
+++ b/packages/zent/assets/grid.scss
@@ -272,6 +272,7 @@
   &-td {
     line-height: 20px;
     padding: 10px 12px;
+    position: relative;
 
     .zent-grid-expandable-btn {
       @include theme-color(border-color, stroke, 6);
@@ -365,5 +366,14 @@
         }
       }
     }
+  }
+
+  &-selection-checkbox {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    line-height: 1;
+    font-size: 0;
+    display: inline-block;
   }
 }
